fix && feat: fix z-index and added new body content

--- a/projeto01/css/_header.css
+++ b/projeto01/css/_header.css
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 1rem;
+  z-index: 1000;
 }
 
 .header_mobile_menu{
@@ -13,7 +14,7 @@
 
 .menu_faketrigger{
   position: absolute;
-  z-index: 100;
+  z-index: 1000;
   height: 30px;
   width: 30px;
   opacity: 0;
@@ -23,7 +24,7 @@
 
 .menu_lines{
   position: absolute;
-  z-index: 10;
+  z-index: 900;
   height: 35px;
   width: 35px;
   top: 3%;
@@ -61,7 +62,7 @@
 
 .menu_items{
   position: absolute;
-  z-index: 9;
+  z-index: 800;
   left: 0;
   top: 0;
   width: 220px;
@@ -102,7 +103,7 @@
 
 .user_faketrigger{
   position: absolute;
-  z-index: 100;
+  z-index: 1000;
   opacity: 0;
   width: 30px;
   height: 30px;
@@ -121,7 +122,7 @@
   position: absolute;
   background-color: var(--side-menu);
   width: 100px;
-  z-index: -1;
+  z-index: 900;
   margin-top: -150px;
 }
 
@@ -208,7 +209,7 @@
   }
 
   .mobile_log{
-    z-index: 0;
+    z-index: 800;
     display: flex;
     flex-direction: row;
     position: relative;
