--- a/projeto01/css/style.css
+++ b/projeto01/css/style.css
@@ -8,3 +8,48 @@ body{
   min-width: 360px;
   margin: 0 auto;
 }
+
+.banner{
+  background-image: url('../img/mandalorian.jpg');
+  background-position: center top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: calc(100vh - 60px);
+  color: white;
+}
+
+.banner_title{
+  content: url('../img/mando-title.png');
+
+}
+
+.banner_stars{
+  content: url('../img/stars.png');
+
+}
+
+.banner_gender{
+  color: #365848;
+  word-spacing: 1rem;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.banner_actions{
+  display: flex;
+
+}
+.action_button{
+  width: 60px;
+  height: 60px;
+}
+
+.action_button > .play{
+  content: url('../img/svg/play.svg');
+
+}
+
+.action_button > .favorite{
+  content: url('../img/svg/plus-circle.svg');
+
+}
